# infra

./: .gitignore  .pre-commit-config.yaml  .sops.yaml  Brewfile  LICENSE  README.md  Taskfile.yaml  pyproject.toml
.taskfiles/setup/: Taskfile.yaml
ansible/: ansible.cfg  inventory
ansible/collections/: requirements.yaml
ansible/group_vars/all/: all.sops.yaml
ansible/group_vars/proxmox_nodes/: proxmox_nodes.sops.yaml
ansible/host_vars/pve02/: pve02.sops.yaml
ansible/plays/: proxmox_bootstrap.yaml  setup_ansible_user.yaml
ansible/roles/proxmox_bootstrap/defaults/: main.yaml
ansible/roles/proxmox_bootstrap/tasks/: main.yaml
ansible/roles/proxmox_bootstrap/vars/: main.yaml
clusters/nndesigns/flux-system/: gotk-sync.yaml
docs/instructions/: bootstrap-proxmox.md  index.md  initial-setup.md  terraform.md
terraform/proxmox/: .terraform.lock.hcl  locals.tf  main.tf  providers.tf  secrets.sops.yaml
terraform/proxmox/modules/talos_vm/: main.tf  outputs.tf  providers.tf  variables.tf
