[project]
name = "infra"
version = "0.1.0"
description = "Infrastructure as code using Ansible, Terraform, Flux, and Renovate Bot, among others, to deploy a Kubernetes cluster on Talos."
authors = [
    { name="Nathan Nayda" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.9.0",
    "ansible-lint>=25.8.1",
    "pre-commit>=4.3.0",
    "yamllint>=1.37.1",
]
